--- a/plugin-px-hub/resources/hub.desktop.in
+++ b/plugin-px-hub/resources/hub.desktop.in
@@ -3,6 +3,6 @@ Type=Service
 ServiceTypes=LXQtPanel/Plugin
 Name=px-hub-plugin
 Comment=Initial plugin of px-hub-service
-Icon=date
+Icon=drive-removable-media
 
 #TRANSLATIONS_DIR=../translations
