--- a/plugin-px-hub/resources/hub.desktop.in
+++ b/plugin-px-hub/resources/hub.desktop.in
@@ -5,4 +5,4 @@ Name=px-hub-plugin
 Comment=Initial plugin of px-hub-service
 Icon=drive-removable-media
 
-#TRANSLATIONS_DIR=../translations
+TRANSLATIONS_DIR=../translations
