--- a/plugin-px-hub/CMakeLists.txt
+++ b/plugin-px-hub/CMakeLists.txt
@@ -9,15 +9,17 @@ include_directories(${CapnProto_INCLUDE_DIRS})
 
 set(HEADERS
 		hub.h
+		AccountObject.h
 		Settings.h
-		rpc/AccountParser.h
+		MessageObject.h
 		interfaces/hub.capnp.h
 		interfaces/event.capnp.h
+		rpc/AccountParser.h
 		rpc/EventHandler.h
 		rpc/EventSubscriber.h
 		rpc/ServiceEventHandler.h
+		rpc/RPCHubClient.h
 		rpc/Utils.h
-		Account.h
         )
 
 set(SOURCES
@@ -26,9 +28,9 @@ set(SOURCES
 		interfaces/event.capnp.c++
 		rpc/EventSubscriber.cpp
 		rpc/ServiceEventHandler.cpp
+		rpc/RPCHubClient.cpp
 		rpc/Utils.cpp
-		Account.cpp
-        )
+		)
 
 
 set(RESOURCES
