Add update process to system plugin

--- a/plugin-px-system/CMakeLists.txt
+++ b/plugin-px-system/CMakeLists.txt
@@ -6,10 +6,12 @@ set(HEADERS
         system.h
 		Settings.h
 		NetworkInformation.h
+		CheckUpdate.h
 		)
 
 set(SOURCES
 		system.cpp
+		CheckUpdate.cpp
 		)
 
 set(RESOURCES
