Improvment and running the px-network-inspection in a thread #61

--- a/plugin-px-system/CMakeLists.txt
+++ b/plugin-px-system/CMakeLists.txt
@@ -6,12 +6,15 @@ set(HEADERS
         system.h
 		Settings.h
 		NetworkInformation.h
+		NetworkInspection.h
 		CheckUpdate.h
 		)
 
 set(SOURCES
 		system.cpp
 		CheckUpdate.cpp
+		NetworkInspection.cpp
+		PxIcon.h
 		)
 
 set(RESOURCES
