Adding calendar to hub plugin #84

--- a/plugin-px-hub/CMakeLists.txt
+++ b/plugin-px-hub/CMakeLists.txt
@@ -22,6 +22,9 @@ set(HEADERS
 		LineSeperator.h
 		HubItem.h
 		AccountItem.h
+		TimeBoxObject.h
+		CalendarItemWidget.h
+		CalendarBox.h
 		)
 
 set(SOURCES
